--- a/wooper/src/main/webapp/resources/css/common/boardSideMenu.css
+++ b/wooper/src/main/webapp/resources/css/common/boardSideMenu.css
@@ -6,7 +6,7 @@
 		    font-weight: normal;
 		    font-style: normal;
 		}
-		*{font-family: 'BMJUA'; color: white;}
+		*{font-family: 'BMJUA';}
 
         @font-face {
             font-family: 'BMJUA';
