--- a/wooper/src/main/webapp/resources/css/management.css
+++ b/wooper/src/main/webapp/resources/css/management.css
@@ -161,3 +161,26 @@
         #loginmemberemail{
             float:right;
         }
+        
+        
+        /* 병합 추가 css */
+        .mmcon{
+        	width:100%;
+        	height:100%;
+        	float:left;
+        }
+        .mmside{
+        	width:15%;
+        	height:100%;
+        	float:left;
+        }
+        .mmheader{
+   	       	width:85%;
+        	height:20%;
+        	float:left;
+        }
+        .mmcontends{
+   	       	width:85%;
+        	height:80%;
+        	float:left;
+        }
