--- a/wooper/src/main/webapp/resources/css/sign/meeting.css
+++ b/wooper/src/main/webapp/resources/css/sign/meeting.css
@@ -1,3 +1,7 @@
+body{
+	background-color: rgb(213, 232, 243);
+}
+
 div{
     box-sizing: border-box;
     text-align: center;
@@ -35,20 +39,20 @@ div{
 }
 
 .table{
-    border: 1px solid gray;
+    border: 1px solid rgb(42, 111, 154);
     box-sizing: border-box;
     padding: 0;
 }
 
 .table th{
-    background-color: lightgray;
-    border: 1px solid gray;
+    background-color: rgb(213, 232, 243);
+    border: 1px solid rgb(42, 111, 154);
     vertical-align: middle;
     box-sizing: border-box;
 }
 
 .table td{
-    border: 1px solid gray;
+    border: 1px solid rgb(42, 111, 154);
     padding: 0;
     vertical-align: middle;
     box-sizing: border-box;
