--- a/wooper/src/main/webapp/resources/css/workSpace.css
+++ b/wooper/src/main/webapp/resources/css/workSpace.css
@@ -17,13 +17,6 @@
     
 }
 
-/*   div{
-      border: 1px solid black;
-      display: inline-block;
-      width: 100px;
-      height: 100px;
-  } */
-
   .logout {
     position: absolute;
     top: 20px;
@@ -35,14 +28,63 @@
     text-align-last: center;
     border-radius: 8px;
   }
+  
+    .mypage {
+    position: absolute;
+    top: 20px;
+    right: 170px;
+    width: 100px;
+    height: 40px;
+    appearance: none;
+    text-align: center;
+    text-align-last: center;
+    border-radius: 8px;
+  }
+  
 
   .project{
     border: 1px solid black;
     display: inline-block;
-    width: 100px;
-    height: 100px;
+    width: auto;
+    height: 60px;
     background-color: rgb(42,111,154);
+    vertical-align: top;
+    border-radius: 8px;
+  	position : relative;
+  	padding-left : 20px;
+  	padding-right : 20px;
+  	cursor : pointer;
   } 
+  
+  .projectListName{
+   text-align: center;
+   line-height: 4;
+  }
+  
+  .projectX{
+  	position : absolute;
+  	right : 9px;
+  	top : 2px;
+  	width : 5px;
+  	hight : 5px;
+  }
+  
+.addProject{
+	border: 1px solid black;
+    display: inline-block;
+    width: 130px;
+    height: 60px;
+    background-color: rgb(42,111,154);
+    vertical-align: top;
+    border-radius: 8px;
+    text-align: center;
+    line-height: 4;
+}
+
+.addWork{
+	padding-left : 50px; 
+}
+
 
 /*   .cal{
       width: 500px;
