--- a/wooper/src/main/webapp/resources/css/management2.css
+++ b/wooper/src/main/webapp/resources/css/management2.css
@@ -13,14 +13,17 @@
             /* border : 2px solid rgb(24, 64, 88); */
             box-sizing:border-box;
         }
-/*         
-        @media(max-width:690px) {
-        	p{font-size:25px;}
-            p{font-size:25px; margin-bottom:0;}
-            memberemail p{font-size:15px; margin-bottom:0;}
+        @media(max-width:950px) {
+        	p{font-size:50px;}
+            h1{font-size:25px; margin-bottom:0;}
+            memberemail h3{font-size:15px; margin-bottom:0;}
             .memberprofile img{height:30px;}
         }
- */
+        @media(max-width:690px) {
+            h1{font-size:15px; margin-bottom:0;}
+            h3{font-size:5px; margin-bottom:0;}
+            .memberprofile img{height:15px;}
+        }
         
 
         /* 전체 테두리 */
@@ -35,7 +38,7 @@
             width:100%;
             height:5%;
         }
-        .teamNamearea p{
+        .teamNamearea h1{
             margin-bottom:0;
         }
 
@@ -65,7 +68,7 @@
             width:25%;
             height: 100%;
         }
-        .teammember, p{
+        .teammember, h1{
             margin-bottom:0;
         }
 
@@ -104,7 +107,7 @@
             height:100%;
             float:left;
         }
-        .selectteammember p{
+        .selectteammember h3{
             margin-top:9px;
             margin-bottom:9px;
         }
