--- a/wooper/src/main/webapp/resources/css/notification/notification.css
+++ b/wooper/src/main/webapp/resources/css/notification/notification.css
@@ -26,13 +26,17 @@
 
         /* 전체 테두리 */
         .notificationcontainer{
-            width:100%;
+        	/* padding-left:20px; */
+            width:90%;
             height:100%;
+            
+			       		display:inline-block;
+                		
         }
         
         /* 타이틀 */
         .notificationname{
-            width:100%;
+            width:1000px;
             height:5%;
         }
         .notificationname h1, .loginmemberemail h3{
@@ -97,12 +101,12 @@
             height:100%;
         }
         .memberinfoemail{
-            width:85%;
+            width:30%;
             height:50%;
             float:left;
         }
         .memberinfohms{
-            width:15%;
+            width:70%;
             height:50%;
             float:left;
         }
@@ -110,3 +114,16 @@
             width:100%;
             height:50%;
         }
+       	.noticeSideMenu, .noticeContent, .memberinfo1{
+    		display:inline-block;
+    			position:absolute;
+    	}
+    	.noticeSideMenu{
+    		position:absolute;
+    	}
+    	.noticeContent{
+    		margin-left:100px; 
+    	}
+    	.allimstatus{
+    		float:left;
+    	}
