--- a/wooper/src/main/webapp/resources/css/sign/meeting.css
+++ b/wooper/src/main/webapp/resources/css/sign/meeting.css
@@ -2,6 +2,15 @@ body{
 	background-color: rgb(213, 232, 243);
 }
 
+input{
+	background-color: rgb(213, 232, 243);
+	border: hidden;
+}
+
+textarea{
+	background-color: rgb(213, 232, 243);
+}
+
 div{
     box-sizing: border-box;
     text-align: center;
@@ -25,6 +34,10 @@ div{
     position: absolute;
     left: 0;
     bottom: 0;
+}
+
+#meeting-dt, #meeting-dept{
+	width: 100%;
 }
 
 .signInfo{
