--- a/wooper/src/main/webapp/resources/css/sign/expenseReport.css
+++ b/wooper/src/main/webapp/resources/css/sign/expenseReport.css
@@ -52,19 +52,19 @@ div{
 }
 
 .table{
-    border: 1px solid gray;
+    border: 1px solid rgb(42, 111, 154);
     box-sizing: border-box;
     padding: 0;
 }
 
 .table th{
-    background-color: lightgray;
-    border: 1px solid gray;
+    background-color: rgb(213, 232, 243);
+    border: 1px solid rgb(42, 111, 154);
     vertical-align: middle;
 }
 
 .table td{
-    border: 1px solid gray;
+    border: 1px solid rgb(42, 111, 154);
     padding: 0;
     vertical-align: middle;
 }
