--- a/wooper/src/main/webapp/resources/css/sign/viewer.css
+++ b/wooper/src/main/webapp/resources/css/sign/viewer.css
@@ -1,21 +1,21 @@
-	div{
+div{
     box-sizing: border-box;
 }
 
-#signLine-modal-dialog{
+#viewer-modal-dialog{
     width: 1100px;
 }
 
-#signLine-people, #signLine-close-btn{
+#viewer-img, #viewer-close-btn{
     font-size: 40px;
 }
 
-#signLine-container{
+#viewer-container{
     height: 700px;
     position: relative;
 }
 
-.signList-container{
+.viewer-container{
     width: 300px;
     height: 600px;
     display: inline-block;
@@ -24,47 +24,47 @@
     bottom: 50px;
 }
 
-.signList-search{
+.viewer-search{
     width: 100%;
     height: 7%;
     border-bottom: 1px solid gray;
 }
 
-.signList, #signLine-info-content{
+.viewer, #viewer-info-content{
     width: 100%;
     height: 94%;
-    border: 1px solid rgb(42, 111, 154);
+    border: 1px solid rgb(42, 111, 154) !important;
 }
 
-#signList-title, #signLine-info-title{
+#viewer-title, #viewer-info-title{
     width: fit-content;
 }
 
-#signLine-info-content{
+#viewer-info-content{
     border: 1px solid rgb(42, 111, 154);
 }
 
-#signList-search-option{
+#viewer-search-option{
     width: 27%;
     float: left;
 }
 
-#signListSearch{
+#viewerSearch{
     width: 60%;
     float: left;
 }
 
-.signListSearchBtn, #signLine-forward-btn, #signLine-back-btn{
+.viewerSearchBtn, #viewer-forward-btn, #viewer-back-btn{
     background-color: white;
     border-style: hidden;
 }
 
-.memberTable{
-            text-align: center;
-            margin-top: 20px;
+#viewer-name{
+    border-top: 1px solid rgb(42, 111, 154);
+    border-bottom: 1px solid rgb(42, 111, 154);
 }
 
-.signLine-iconbox{
+.viewer-iconbox{
     width: 100px;
     height: 200px;
     text-align: center;
@@ -75,15 +75,15 @@
     vertical-align: middle;
 }
 
-#signLine-forward-btn{
+#viewer-forward-btn{
     margin-top: 55px;
 }
 
-#signLine-forward, #signLine-back{
+#viewer-forward, #viewer-back{
     font-size: 45px;
 }
 
-.signLine-info{
+.viewer-info{
     width: 500px;
     height: 600px;
     display: inline-block;
@@ -92,7 +92,7 @@
     bottom: 50px;   
 }
 
-#signLine-table{
+#viewer-table{
     width: 400px;
     height: auto;
     margin-left: 48px;
@@ -100,16 +100,22 @@
     text-align: center;
 }
 
-#signLine-table th, #signLine-table td{
-    border: 1px solid rgb(42, 111, 154);
+#viewer-table th, #viewer-table td{
+    border: 1px solid rgb(42, 111, 154) !important;
 }
 
-#signLine-next-btn{
+#viewer-table th{
+	background-color: rgb(213, 232, 243);
+}
+
+#viewer-confirm-btn{
     margin-right: 30px;
     width: 100px;
     font-size: 20px;
 }
 
-.memberTable th, #signLine-table th{
-	background-color: rgb(213, 232, 243);
+#viewer-cancel-btn{
+    margin-right: 20px;
+    width: 100px;
+    font-size: 20px;
 }
