--- a/wooper/src/main/webapp/resources/css/management.css
+++ b/wooper/src/main/webapp/resources/css/management.css
@@ -25,7 +25,7 @@
 
         /* 전체 테두리 */
         .managementcontainer{
-            width:100%;
+            width:1200px;
             height:100%;
             padding-left: 6rem!important;
         }
@@ -35,7 +35,7 @@
             width:100%;
             height:5%;
         }
-        .teamNamearea p{
+        .teamNamearea h4{
             margin-bottom:0;
         }
 
@@ -65,7 +65,7 @@
             width:25%;
             height: 100%;
         }
-        .teammember, p{
+        .teammember, h4{
             margin-bottom:0;
         }
 
@@ -104,7 +104,7 @@
             height:100%;
             float:left;
         }
-        .selectteammember p{
+        .selectteammember h4{
             margin-top:9px;
             margin-bottom:9px;
         }
@@ -195,7 +195,9 @@
         	float:left;
         }
         .mmPagination{
-        	width:85%;
+        	width:40%;
         	height:5%;
         	float:left;
+        	text-align:center;
+        	margin-left:600px;
         }
