--- a/wooper/src/main/webapp/resources/css/card.css
+++ b/wooper/src/main/webapp/resources/css/card.css
@@ -1,19 +1,3 @@
-/* @font-face {
-    font-family: 'BMJUA';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-  }
-
-  .font {
-    font-family: "BMJUA";
-    color: black;
-  } */
-
-/*   body{
-    background-color: rgb(213,232,243);
-    
-} */
 
 .top{
     height: 10%;
@@ -31,7 +15,7 @@
     height: auto;
     margin-left: 10px;
     padding: 10px;
-    border: 3px rgb(42,111,154) solid;
+    border: 5px rgb(42,111,154) solid;
     background-color: white;
     top: 0;
     vertical-align: top;
@@ -40,8 +24,8 @@
 
 .fill{
     position: relative;
-    border : 3px rgb(213,232,243) solid;
- height: auto; 
+    border : 4px rgb(213,232,243) solid;
+ 	height: auto; 
     top: 5px;
     cursor: pointer;
     margin: auto;
@@ -52,14 +36,18 @@
 
 .listNm{
     display: inline-block;
+    margin-left: 5px;
+    margin-top : 5px;
 }
 
 .mem{
     display: inline-block;
+    margin-left: 5px;
 }
 
 .memImg{
     display: inline-block;
+    margin-left: 2px;
 }
 
 .create{
@@ -68,6 +56,8 @@
 
 .LcreateDt{
     display: inline-block;
+    margin-left: 5px;
+    margin-right: 7px;
 }
 
 .listStartDt{
@@ -77,6 +67,8 @@
 
 .LEndDt{
     display: inline-block;
+    margin-left: 5px;
+    margin-right: 7px;
 }
 
 .listEndDt{
@@ -85,10 +77,17 @@
 
 .lStatus{
     display: inline-block;
+    margin-left: 12px;
+    margin-right: 12px;
 }
 
 .statusCategory{
     display: inline-block;
+}
+
+.status{
+	margin-left : 12px;
+	margin-right : 14px
 }
 
 .Lfile{
@@ -108,7 +107,7 @@
 }
 
 .hovered{
-	border : 3px  rgb(42,111,154) solid;
+	border : 4px  rgb(42,111,154) solid;
     border-style: dashed;
 }
 
@@ -124,28 +123,34 @@
 
 .addCard{
     display: inline-block;
-    border: 1px solid rgb(42,111,154);
+    border: 5px solid rgb(42,111,154);
+    background-color : white;
+    border-radius : 6px;
     margin-left: 10px;
+    font-size: larger;
 }
 
 .undo{
     display: inline-block;
+    z-index : 1;
+    float : right;
 }
 
 .addList{
     width: 150px;
     height: 20px;
     float: bottom;
+    
 }
 
 
 /* ****************************************************** */
 
-.addList{
+/* .addList{
     width: 130px;
     height: 20px;
 }
-
+ */
 .name{
     display: inline-block;
     margin-bottom: 15px;
@@ -204,9 +209,14 @@
 	display: inline-block;
 }
 
-.memTag{
-	display: inline-block;
+
+.memTag {
+    display: inline-block;
+    text-align: center;
+    padding: 3px;
+    padding-left: 6px;
 }
+
 
 .memNm{
 	display: inline-block;
@@ -225,4 +235,17 @@
 
 .upMemTag{
 	display: inline-block;   
+}
+
+/**********************이미지  */
+.profileMemImg{
+	width : 40px;
+}
+
+.listStartImg{
+	width : 30px;
+}
+.statusImg{
+	margin-top : 5px;
+	width : 30px;
 }
