--- a/wooper/src/main/webapp/resources/css/workSpace.css
+++ b/wooper/src/main/webapp/resources/css/workSpace.css
@@ -43,23 +43,38 @@
   
 
   .project{
-    border: 1px solid black;
+    border: 4px solid rgb(42,111,154);
     display: inline-block;
+    color : rgb(24,64,88);
     width: auto;
-    height: 60px;
-    background-color: rgb(42,111,154);
+    height: 55px;
+    background-color: white;
     vertical-align: top;
     border-radius: 8px;
   	position : relative;
-  	padding-left : 20px;
-  	padding-right : 20px;
+  	padding-left : 30px;
+  	padding-right : 30px;
+  	padding-bottom : 40px;
   	cursor : pointer;
   } 
   
+/*   .projectName{
+  	color : rgb(24,64,88);
+  }
+  .projectYN{
+  	color : rgb(24,64,88);
+  }
+   */
+  
   .projectListName{
    text-align: center;
-   line-height: 4;
+   line-height: 50px;
   }
+  
+.projectImg{
+	width : 30px;
+	line-height : 5px;
+}  
   
   .projectX{
   	position : absolute;
@@ -70,15 +85,16 @@
   }
   
 .addProject{
-	border: 1px solid black;
+	border: 4px solid rgb(42,111,154);
+	color : rgb(24,64,88);
     display: inline-block;
-    width: 130px;
-    height: 60px;
-    background-color: rgb(42,111,154);
+    width: 180px;
+    height: 55px;
+    background-color: white;
     vertical-align: top;
     border-radius: 8px;
     text-align: center;
-    line-height: 4;
+    line-height: 50px;
 }
 
 .addWork{
