--- a/wooper/src/main/webapp/resources/css/workSpaceHeader.css
+++ b/wooper/src/main/webapp/resources/css/workSpaceHeader.css
@@ -17,9 +17,9 @@
 }
 
   .dbutton {
-    position: absolute;
+	position: fixed; 
     top: 20px;
-    right: 10px;
+    right: 50px;
     width: 100px;
     height: 40px;
     appearance: none;
