--- a/wooper/src/main/webapp/resources/css/sign/signMain.css
+++ b/wooper/src/main/webapp/resources/css/sign/signMain.css
@@ -8,10 +8,12 @@ body{
 
 #document-container{
     box-sizing: border-box;
-    height: 935px;
+    min-height: 935px;
+    height: auto;
     width: 80%;
     padding-bottom: 0px;
     float: left;
+    overflow: auto;
 }
 
 .tab_content{
